# Projekt-c-

./: CMakeLists.txt  README.md  TaskEditWindow.cpp  TaskEditWindow.h  TaskWindow.cpp  TaskWindow.h  WeekView.cpp  WeekView.h  database.cpp  database.h  main.cpp  resources.qrc
